--- a/index.html
+++ b/index.html
@@ -244,12 +244,15 @@
     <div class="row">
       <div class="col-12 mb-3">
         <a href="#">
-          <div class=" row p-3 d-flex blog">
+          <div class=" row pt-3 pb-3 d-flex align-items-center blog">
             <div class="d-none d-sm-flex col-sm-3 image">
+              <img src="https://picsum.photos/200/100" alt="blog post image">
             </div>
             <div class="col-12 col-sm-9 blog-post">
               <h3>Grandparents & Day Care</h3>
-              <p>This post cannot possibly live up to what you want.</p>
+              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. At, temporibus quasi officiis voluptates amet
+                beatae repellat deserunt nostrum corrupti provident dolore inventore qui autem quia nobis fuga
+                reprehenderit quidem molestias..</p>
               <p>Emily Oster</p>
               <span>May 18</span>
               <span><i class="far fa-heart"></i>69</span>
@@ -260,12 +263,15 @@
         </a>
 
         <a href="#">
-          <div class="row p-3 d-flex blog">
+          <div class="row pt-3 pb-3 d-flex align-items-center blog">
             <div class="d-none d-sm-flex col-sm-3 image">
+              <img src="https://picsum.photos/200/100" alt="blog post image">
             </div>
             <div class="col-12 col-sm-9 blog-post">
               <h3>Can Kids Transmit the Virus</h3>
-              <p>Please, please can we camp?</p>
+              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero sed magnam modi placeat iure labore
+                optio quia cupiditate eos ipsa, molestias magni accusamus tempore, deleniti corrupti incidunt, in
+                delectus ad officia! Sequi fugiat perspiciatis ad eius aliquid vel ipsam optio?</p>
               <p>Emily Oster</p>
               <span>May 4</span>
               <span><i class="far fa-heart"></i>32</span>
@@ -276,12 +282,14 @@
         </a>
 
         <a href="#">
-          <div class="row p-3 d-flex blog">
+          <div class="row pt-3 pb-3 d-flex align-items-center blog">
             <div class="d-none d-sm-flex col-sm-3 image">
+              <img src="https://picsum.photos/200/100" alt="blog post image">
             </div>
             <div class="col-12 col-sm-9 blog-post">
               <h3>Birth in the Time of COVID-19</h3>
-              <p>Yes, more Coronavirus.</p>
+              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit incidunt ratione perferendis nisi
+                pariatur rerum doloremque adipisci dolorum maxime sint!.</p>
               <p>Emily Oster</p>
               <span>May 17</span>
               <span><i class="far fa-heart"></i>24</span>
