--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
     <div class="row">
       <div class="col-12 mb-3">
         <a href="#">
-          <div class=" row pt-3 pb-3 d-flex align-items-center blog">
+          <div class=" row pt-3 pb-3 d-flex align-items-start blog">
             <div class="d-none d-sm-flex col-sm-3 image">
               <img src="https://picsum.photos/200/100" alt="blog post image">
             </div>
@@ -263,7 +263,7 @@
         </a>
 
         <a href="#">
-          <div class="row pt-3 pb-3 d-flex align-items-center blog">
+          <div class="row pt-3 pb-3 d-flex align-items-start blog">
             <div class="d-none d-sm-flex col-sm-3 image">
               <img src="https://picsum.photos/200/100" alt="blog post image">
             </div>
@@ -282,7 +282,7 @@
         </a>
 
         <a href="#">
-          <div class="row pt-3 pb-3 d-flex align-items-center blog">
+          <div class="row pt-3 pb-3 d-flex align-items-start blog">
             <div class="d-none d-sm-flex col-sm-3 image">
               <img src="https://picsum.photos/200/100" alt="blog post image">
             </div>
